--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ under GPL v.2 license
 		</div>	
 	</div>
  <div class="container">
-		<div class="row text-center">
+		<div class="row text-left">
 			<div class="span3">
 				<a href="#"><img src="images/speaker1.jpg" class="img-polaroid" alt="bootstrap" /></a>
 				<h3>John Smith</h3>
