--- a/index.html
+++ b/index.html
@@ -341,26 +341,26 @@ under GPL v.2 license
 				<a href="#"><img src="images/speaker1.jpg" class="img-polaroid" alt="bootstrap" /></a>
 				<h3>John Smith</h3>
 				<p> John is an independent designer/developer who is passionate about beautiful design, elegant code, and the intersection of the two.</p>
-				<p class="text-center social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
+				<p class="text-left social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
 			</div>
 			<div class="span3">
 				<a href="#"><img src="images/speaker2.jpg"  class="img-polaroid" alt="bootstrap" /></a>
 				<h3>Lisa Sly</h3>
 				<p> Lisa is an independent designer/developer who is passionate about beautiful design, elegant code, and the intersection of the two.</p>
-				<p class="text-center social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
+				<p class="text-left social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
 			</div>
 			<div class="span3">
 				<a href="#"><img src="images/speaker3.jpg"  class="img-polaroid" alt="bootstrap" /></a>
 				<h3>Joanna Mill</h3>
 				<p> Joanna is an independent designer/developer who is passionate about beautiful design, elegant code, and the intersection of the two.</p>
-				<p class="text-center social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
+				<p class="text-left social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
 			</div>
 			
 			<div class="span3">
 				<a href="#"><img src="images/speaker4.jpg"  class="img-polaroid" alt="bootstrap" /></a>
 				<h3>Sean Cyrus</h3>
 				<p> Sean is an independent designer/developer who is passionate about beautiful design, elegant code, and the intersection of the two.</p>
-				<p class="text-center social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
+				<p class="text-left social-contacts"><a href="#"><i class="icon-facebook-sign icon-2x"></i></a> <a href="#"><i class="icon-twitter-sign icon-2x"></i></a></p>
 			</div>
 			
 		</div>
